--- a/.github/workflows/generate-zip.yml
+++ b/.github/workflows/generate-zip.yml
@@ -31,8 +31,14 @@ jobs:
             - name: Generate ZIP file
               run: npm run package-plugin:deploy
 
+            - name: Unzip generated archive
+              uses: montudor/action-zip@v1
+              with:
+                args: unzip -qq woocommerce-gutenberg-products-block.zip -d woocommerce-gutenberg-products-block
+
             - name: Use the Upload Artifact GitHub Action
               uses: actions/upload-artifact@v2
               with:
-                  name: woocommerce-gutenberg-products-block
-                  path: woocommerce-gutenberg-products-block.zip
+                    name: woocommerce-gutenberg-products-block
+                    path: woocommerce-gutenberg-products-block
+        
