--- a/.github/workflows/generate-zip.yml
+++ b/.github/workflows/generate-zip.yml
@@ -41,4 +41,6 @@ jobs:
               with:
                     name: woocommerce-gutenberg-products-block
                     path: woocommerce-gutenberg-products-block
+                    target: woocommerce-gutenberg-products-block.zip
+
         
