--- a/.github/workflows/generate-zip.yml
+++ b/.github/workflows/generate-zip.yml
@@ -31,19 +31,19 @@ jobs:
       - name: Generate ZIP file
         run: npm run package-plugin:deploy
 
-      - name: Unzip generated archive
-        uses: montudor/action-zip@v1
-        with:
-          args: unzip -qq woocommerce-gutenberg-products-block.zip -d woocommerce-gutenberg-products-block
+      # - name: Unzip generated archive
+      #   uses: montudor/action-zip@v1
+      #   with:
+      #     args: unzip -qq woocommerce-gutenberg-products-block.zip -d woocommerce-gutenberg-products-block
 
-      - name: Use the Upload Artifact GitHub Action
-        uses: actions/upload-artifact@v2
-        with:
-          name: woocommerce-gutenberg-products-block
-          path: woocommerce-gutenberg-products-block
+      # - name: Use the Upload Artifact GitHub Action
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: woocommerce-gutenberg-products-block
+      #     path: woocommerce-gutenberg-products-block
 
       - name: Create release
-        uses: ncipollo/release-action@v1
+        uses: softprops/action-gh-release@v1
         with:
-          artifacts: "woocommerce-gutenberg-products-block"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          files: woocommerce-gutenberg-products-block.zip
+
