--- a/.github/workflows/generate-zip.yml
+++ b/.github/workflows/generate-zip.yml
@@ -46,4 +46,5 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: woocommerce-gutenberg-products-block.zip
+          tag_name: ${{ github.ref }}
 
