--- a/.github/workflows/generate-zip.yml
+++ b/.github/workflows/generate-zip.yml
@@ -47,4 +47,8 @@ jobs:
         with:
           files: woocommerce-gutenberg-products-block.zip
           tag_name: ${{ github.ref }}
+          body: ''
+        env:
+          GITHUB_REPOSITORY: nielslange/woo-test-environment
+
 
