--- a/.github/workflows/generate-zip.yml
+++ b/.github/workflows/generate-zip.yml
@@ -42,11 +42,14 @@ jobs:
           name: woocommerce-gutenberg-products-block
           path: woocommerce-gutenberg-products-block
 
-      - name: Upload artifact
+      - name: Download artifact
         uses: actions/download-artifact@v3
         with:
           name: woocommerce-gutenberg-products-block
     
+      - name: Show artifact URL
+        run: echo ${{ env.GITHUB_WORKSPACE }}/woocommerce-gutenberg-products-block.zip
+
       # - name: Create release
       #   uses: softprops/action-gh-release@v1
       #   with:
