--- a/package.json
+++ b/package.json
@@ -105,43 +105,43 @@
 		"@types/classnames": "2.3.0",
 		"@types/dinero.js": "1.9.0",
 		"@types/gtag.js": "0.0.10",
-		"@types/jest": "28.1.4",
+		"@types/jest": "27.4.1",
 		"@types/jest-environment-puppeteer": "5.0.2",
 		"@types/jquery": "3.5.14",
 		"@types/lodash": "4.14.182",
 		"@types/puppeteer": "5.4.6",
 		"@types/react": "17.0.45",
 		"@types/react-dom": "17.0.17",
-		"@types/wordpress__block-editor": "7.0.0",
-		"@types/wordpress__blocks": "^11.0.3",
+		"@types/wordpress__block-editor": "6.0.6",
+		"@types/wordpress__blocks": "11.0.3",
 		"@types/wordpress__compose": "4.0.1",
-		"@types/wordpress__data": "6.0.1",
+		"@types/wordpress__data": "4.6.11",
 		"@types/wordpress__data-controls": "2.2.0",
 		"@typescript-eslint/eslint-plugin": "5.30.5",
 		"@typescript-eslint/parser": "5.30.5",
 		"@woocommerce/api": "0.2.0",
 		"@woocommerce/e2e-utils": "0.2.0",
-		"@woocommerce/eslint-plugin": "2.2.0",
+		"@woocommerce/eslint-plugin": "2.0.0",
 		"@woocommerce/woocommerce-rest-api": "1.0.1",
 		"@wordpress/api-fetch": "6.9.0",
 		"@wordpress/babel-preset-default": "6.14.0",
-		"@wordpress/base-styles": "4.6.0",
+		"@wordpress/base-styles": "4.0.4",
 		"@wordpress/block-editor": "8.2.0",
-		"@wordpress/blocks": "11.11.0",
+		"@wordpress/blocks": "11.1.5",
 		"@wordpress/browserslist-config": "4.1.2",
 		"@wordpress/components": "19.1.5",
-		"@wordpress/data-controls": "2.12.0",
+		"@wordpress/data-controls": "2.2.7",
 		"@wordpress/dependency-extraction-webpack-plugin": "3.2.1",
-		"@wordpress/dom": "3.12.0",
+		"@wordpress/dom": "3.2.7",
 		"@wordpress/e2e-test-utils": "7.8.0",
 		"@wordpress/e2e-tests": "4.6.0",
-		"@wordpress/element": "4.10.0",
+		"@wordpress/element": "4.0.4",
 		"@wordpress/env": "4.9.0",
 		"@wordpress/html-entities": "3.12.0",
 		"@wordpress/i18n": "4.12.0",
 		"@wordpress/is-shallow-equal": "4.12.0",
-		"@wordpress/prettier-config": "^1.4.0",
-		"@wordpress/scripts": "23.4.0",
+		"@wordpress/prettier-config": "1.4.0",
+		"@wordpress/scripts": "22.3.0",
 		"autoprefixer": "10.4.7",
 		"axios": "0.27.2",
 		"babel-plugin-explicit-exports-references": "^1.0.2",
@@ -173,7 +173,7 @@
 		"glob-promise": "4.2.2",
 		"husky": "2.4.1",
 		"ignore-loader": "0.1.2",
-		"jest-circus": "28.1.2",
+		"jest-circus": "27.5.1",
 		"jest-environment-puppeteer": "6.1.1",
 		"jest-fetch-mock": "3.0.3",
 		"jest-html-reporters": "3.0.10",
@@ -203,7 +203,7 @@
 		"webpack-bundle-analyzer": "4.5.0",
 		"webpack-cli": "3.3.12",
 		"webpack-rtl-plugin": "2.0.0",
-		"wp-types": "^3.60.0",
+		"wp-types": "3.60.0",
 		"zenhub-api": "0.2.0"
 	},
 	"engines": {
@@ -218,7 +218,7 @@
 		"@wordpress/plugins": "4.10.0",
 		"@wordpress/primitives": "3.10.0",
 		"@wordpress/server-side-render": "3.10.0",
-		"@wordpress/url": "^3.13.0",
+		"@wordpress/url": "3.13.0",
 		"@wordpress/wordcount": "3.12.0",
 		"classnames": "2.3.1",
 		"compare-versions": "4.1.3",
@@ -235,8 +235,8 @@
 		"wordpress-components": "npm:@wordpress/components@14.2.0"
 	},
 	"peerDependencies": {
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react": "^17.0.0",
+		"react-dom": "^17.0.0"
 	},
 	"optionalDependencies": {
 		"ndb": "1.1.5"
