--- a/package.json
+++ b/package.json
@@ -212,7 +212,7 @@
 	},
 	"dependencies": {
 		"@wordpress/autop": "3.12.0",
-		"@wordpress/compose": "^5.10.0",
+		"@wordpress/compose": "5.5.0",
 		"@wordpress/deprecated": "3.12.0",
 		"@wordpress/icons": "6.1.1",
 		"@wordpress/notices": "3.12.0",
