migrate to webpack 5

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
 		"postinstall": "patch-package",
 		"reformat-files": "prettier --ignore-path .eslintignore --write \"**/*.{js,jsx,json,ts,tsx}\"",
 		"release": "sh ./bin/wordpress-deploy.sh",
-		"start": "rimraf build/* && cross-env BABEL_ENV=default CHECK_CIRCULAR_DEPS=true webpack --watch --info-verbosity none",
+		"start": "rimraf build/* && cross-env BABEL_ENV=default CHECK_CIRCULAR_DEPS=true webpack --watch ",
 		"storybook": "start-storybook  -c ./storybook -p 6006 --ci",
 		"storybook:build": "BABEL_ENV=development build-storybook  -c ./storybook -o ./storybook/dist",
 		"storybook:deploy": "rimraf ./storybook/dist/* && npm run storybook:build && gh-pages -d ./storybook/dist",
@@ -153,7 +153,7 @@
 		"chalk": "4.1.2",
 		"circular-dependency-plugin": "5.2.2",
 		"commander": "9.3.0",
-		"copy-webpack-plugin": "6.4.1",
+		"copy-webpack-plugin": "11.0.0",
 		"core-js": "3.23.3",
 		"create-file-webpack": "1.0.2",
 		"cross-env": "7.0.3",
@@ -196,12 +196,12 @@
 		"rimraf": "3.0.2",
 		"sass-loader": "10.1.0",
 		"storybook-addon-react-docgen": "1.2.42",
-		"terser-webpack-plugin": "3.0.3",
+		"terser-webpack-plugin": "5.3.3",
 		"typescript": "4.7.4",
 		"utility-types": "3.10.0",
-		"webpack": "4.44.2",
+		"webpack": "5.73.0",
 		"webpack-bundle-analyzer": "4.5.0",
-		"webpack-cli": "3.3.12",
+		"webpack-cli": "4.10.0",
 		"webpack-rtl-plugin": "2.0.0",
 		"wp-types": "3.60.0",
 		"zenhub-api": "0.2.0"
