--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
 		"postinstall": "patch-package",
 		"reformat-files": "prettier --ignore-path .eslintignore --write \"**/*.{js,jsx,json,ts,tsx}\"",
 		"release": "sh ./bin/wordpress-deploy.sh",
-		"start": "rimraf build/* && cross-env BABEL_ENV=default CHECK_CIRCULAR_DEPS=true webpack --watch ",
+		"start": "rimraf build/* &&  cross-env BABEL_ENV=default CHECK_CIRCULAR_DEPS=true node --trace-deprecation node_modules/webpack/bin/webpack.js --watch ",
 		"storybook": "start-storybook  -c ./storybook -p 6006 --ci",
 		"storybook:build": "BABEL_ENV=development build-storybook  -c ./storybook -o ./storybook/dist",
 		"storybook:deploy": "rimraf ./storybook/dist/* && npm run storybook:build && gh-pages -d ./storybook/dist",
@@ -131,7 +131,7 @@
 		"@wordpress/browserslist-config": "4.1.2",
 		"@wordpress/components": "19.1.5",
 		"@wordpress/data-controls": "2.2.7",
-		"@wordpress/dependency-extraction-webpack-plugin": "3.2.1",
+		"@wordpress/dependency-extraction-webpack-plugin": "3.6.0",
 		"@wordpress/dom": "3.2.7",
 		"@wordpress/e2e-test-utils": "7.8.0",
 		"@wordpress/e2e-tests": "4.6.0",
@@ -202,7 +202,7 @@
 		"webpack": "5.73.0",
 		"webpack-bundle-analyzer": "4.5.0",
 		"webpack-cli": "4.10.0",
-		"webpack-rtl-plugin": "2.0.0",
+		"@automattic/webpack-rtl-plugin": "6.0.0",
 		"wp-types": "3.60.0",
 		"zenhub-api": "0.2.0"
 	},
