--- a/.github/workflows/generate-zip.yml
+++ b/.github/workflows/generate-zip.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm run package-plugin:deploy
 
       - name: Create temp folder
-        run: mv woocommerce-gutenberg-products-block.zip temp/woocommerce-gutenberg-products-block-${{ github.event.pull_request.number }}.zip
+        run: mkdir temp
 
       - name: Rename and move ZIP file
         run: mv woocommerce-gutenberg-products-block.zip temp/woocommerce-gutenberg-products-block-${{ github.event.pull_request.number }}.zip
@@ -44,10 +44,10 @@ jobs:
           username: ${{ secrets.FTP_USER }}
           password: ${{ secrets.FTP_PASS }}
           local-dir: ./temp
-          server-dir: ${{ secrets.FTP_DIR }}/releases/
+          server-dir: ${{ secrets.FTP_DIR }}
 
       - name: Delete ZIP file
-        run: rm -rf ./temp
+        run: rm -rf temp
 
 
       # - name: Push release ZIP to woocommerce/woocommerce-blocks-releases
