Generate ZIP file using GitHub Actions

--- a/.github/workflows/generate-zip.yml
+++ b/.github/workflows/generate-zip.yml
@@ -53,7 +53,9 @@ jobs:
         with:
           message: |
             The release ZIP for this PR is accessible via:
-            ```https://nielslange.com/releases/woocommerce-gutenberg-products-block-${{ github.event.pull_request.number }}.zip```
+            ```
+            https://nielslange.com/releases/woocommerce-gutenberg-products-block-${{ github.event.pull_request.number }}.zip
+            ```
           allow-repeats: true
 
       - name: Delete ZIP file
