--- a/.github/workflows/php-js-e2e-tests.yml
+++ b/.github/workflows/php-js-e2e-tests.yml
@@ -14,6 +14,8 @@ jobs:
         name: JavaScript E2E Tests (WP latest with Gutenberg plugin)
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v3
+
             - uses: ./.github/e2e-tests
               with:
                   WOOCOMMERCE_BLOCKS_PHASE: '${{ secrets.GITHUB_TOKEN }}'
