--- a/.github/workflows/php-js-e2e-tests.yml
+++ b/.github/workflows/php-js-e2e-tests.yml
@@ -18,6 +18,86 @@ jobs:
 
             - uses: ./.github/e2e-tests
               with:
-                  WOOCOMMERCE_BLOCKS_PHASE: '${{ secrets.GITHUB_TOKEN }}'
-                  GUTENBERG_EDITOR_CONTEXT: '3'
-                  WORDPRESS_VERSION: '1'
+                  WOOCOMMERCE_BLOCKS_PHASE: '3'
+                  GUTENBERG_EDITOR_CONTEXT: 'gutenberg'
+                  WORDPRESS_VERSION: ''
+
+    JSE2E:
+        strategy:
+            fail-fast: false
+            matrix:
+                part: [1, 2, 3, 4, 5]
+        name: JavaScript E2E Tests (WP latest)
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+
+            - uses: ./.github/e2e-tests
+              with:
+                  WOOCOMMERCE_BLOCKS_PHASE: '3'
+                  GUTENBERG_EDITOR_CONTEXT: ''
+                  WORDPRESS_VERSION: ''
+
+    JSE2EPreviousWordPressWithGutenberg:
+        strategy:
+            fail-fast: false
+            matrix:
+                part: [1, 2, 3, 4, 5]
+        name: JavaScript E2E Tests (WP 5.9 with Gutenberg plugin)
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+
+            - uses: ./.github/e2e-tests
+              with:
+                  WOOCOMMERCE_BLOCKS_PHASE: '3'
+                  GUTENBERG_EDITOR_CONTEXT: 'gutenberg'
+                  WORDPRESS_VERSION: 5.9''
+
+    JSE2EPrevious:
+        strategy:
+            fail-fast: false
+            matrix:
+                part: [1, 2, 3, 4, 5]
+        name: JavaScript E2E Tests (WP 5.9)
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+
+            - uses: ./.github/e2e-tests
+              with:
+                  WOOCOMMERCE_BLOCKS_PHASE: '3'
+                  GUTENBERG_EDITOR_CONTEXT: ''
+                  WORDPRESS_VERSION: '5.9'
+
+    JSE2EMinimiumWordPressWithGutenberg:
+        strategy:
+            fail-fast: false
+            matrix:
+                part: [1, 2, 3, 4, 5]
+        name: JavaScript E2E Tests (WP 5.8 with Gutenberg plugin)
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+
+            - uses: ./.github/e2e-tests
+              with:
+                  WOOCOMMERCE_BLOCKS_PHASE: '3'
+                  GUTENBERG_EDITOR_CONTEXT: 'gutenberg'
+                  WORDPRESS_VERSION: '5.8'
+
+    JSE2EMinimiumWordPress:
+        strategy:
+            fail-fast: false
+            matrix:
+                part: [1, 2, 3, 4, 5]
+        name: JavaScript E2E Tests (WP latest)
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+
+            - uses: ./.github/e2e-tests
+              with:
+                  WOOCOMMERCE_BLOCKS_PHASE: '3'
+                  GUTENBERG_EDITOR_CONTEXT: ''
+                  WORDPRESS_VERSION: '5.8'
