--- a/.github/workflows/generate-zip.yml
+++ b/.github/workflows/generate-zip.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Add release ZIP URL as comment to the PR
         uses: mshick/add-pr-comment@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.API_TOKEN_GITHUB }}
+          GITHUB_TOKEN: ${{ secrets.PAT_FOR_ACTIONS }}
         with:
           message: |
             The release ZIP for this PR is accessible via:
