--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,7 +10,7 @@
 	>
 	<testsuites>
 		<testsuite name="WooCommerce Blocks Test Suite">
-			<directory suffix=".php">./tests/php</directory>
+			<directory suffix=".php">./tests/php/StoreApi/Routes</directory>
 		</testsuite>
 	</testsuites>
 </phpunit>
