--- a/.github/workflows/typescript-monitoring.yml
+++ b/.github/workflows/typescript-monitoring.yml
@@ -44,7 +44,12 @@ jobs:
             - name: Check if the checklist.xml file is changed
               id: verify_diff
               run: |
-                  git diff --quiet checkstyle.xml || echo "::set-output name=is_different_checkstyle::"true""
+                  git diff --quiet checkstyle.xml || echo "::set-output name=is_different_checkstyle::true"
+
+            - name: debug
+              id: debug
+              run: |
+                  echo steps.verify_diff.outputs.is_different_checkstyle
 
             - name: Commit the new checklist.xml file
               if: steps.verify_diff.outputs.is_different_checkstyle == 'true'
