--- a/.github/workflows/automate-team-review-assignment-config.yml
+++ b/.github/workflows/automate-team-review-assignment-config.yml
@@ -3,9 +3,12 @@ on:
     pull_request:
         types: [opened, ready_for_review]
 
+permissions: 
+  pull-requests: "write"
+
 jobs:
     add-reviews:
-        if: github.event.pull_request.draft == false
+        if: github.event.pull_request.draft == false && github.actor !== 'dependabot[bot]' 
         runs-on: ubuntu-latest
         steps:
             - name: Check config and assign reviews
