--- a/package.json
+++ b/package.json
@@ -232,6 +232,7 @@
 		"dinero.js": "1.9.1",
 		"downshift": "6.1.7",
 		"html-react-parser": "0.14.3",
+		"preact": "^10.11.0",
 		"react-number-format": "4.9.3",
 		"reakit": "1.3.11",
 		"snakecase-keys": "5.4.2",
