--- a/.editorconfig
+++ b/.editorconfig
@@ -18,10 +18,10 @@ trim_trailing_whitespace = true
 [*.txt]
 trim_trailing_whitespace = false
 
-[*.{json,yml}]
+[*.yml]
 trim_trailing_whitespace = false
 indent_style = space
 indent_size = 2
 
-[*.json]
-indent_style = tab
+[*.md]
+indent_style = space
