update missinge side effect

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"./assets/js/blocks/cart-checkout-shared/sidebar-notices/index.tsx",
 		"./assets/js/blocks/filter-wrapper/register-components.ts",
 		"./assets/js/blocks/product-query/variations/**.tsx",
-		"./assets/js/blocks/product-query/index.tsx"
+		"./assets/js/blocks/product-query/index.tsx",
+		"./assets/js/blocks/product-query/inspector-controls.tsx"
 	],
 	"repository": {
 		"type": "git",
