--- a/.github/workflows/merged-with-labels.yml
+++ b/.github/workflows/merged-with-labels.yml
@@ -9,3 +9,4 @@ jobs:
       - uses: actions-ecosystem/action-remove-labels@v1
         with:
           labels: 'status: ready to merge'
+          github_token: ${{ secrets.GITHUB_TOKEN }}
