--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -77,12 +77,7 @@ jobs:
         if: steps.check_files.outputs.files_exists == 'true'
         run: composer install
 
-      - name: Download Build Assets
-        uses: actions/download-artifact@v3
-        with:
-          name: build-assets
-
-      - name: blocks.ini setup
+      - name: Setup blocks.ini
         run: echo 'woocommerce_blocks_phase = 3' > blocks.ini
 
       - name: Setup node version and npm cache
@@ -90,7 +85,10 @@ jobs:
         with:
           node-version-file: '.nvmrc'
           cache: 'npm'
-
+      
+      - name: Install wp-env
+        run: npm install -g @wordpress/env
+      
       - name: Run PHPUnit tests
         if: steps.check_files.outputs.files_exists == 'true'
         run: |
